--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/assets/logo/save-money.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Finance Tracker</title>
   </head>
-  <body>
+  <body class="bg-[#191D26] font-[Inter] text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
