--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Finance Tracker</title>
   </head>
-  <body class="bg-[#191D26] font-[Inter] text-white">
+  <body class="bg-bgPrimary font-[Inter] text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
